<resources>
  <string name="app_name">Cargopull Исполнитель</string>
  <string name="login">Вход</string>
  <string name="phone_number">Номер телефона</string>
  <string name="server_data_format_error">Ошибка формата данных от сервера</string>
  <string name="no_network_connection">Отсуствует подключение к сети</string>
  <string name="no_network_connecting">Соединение отсутствует.\nВосстанавливаем связь…</string>
  <string name="sms_network_error">Ошибка соединения,\nповторите попытку</string>
  <string name="code_network_error">Ошибка соединения,\nвведите код еще раз</string>
  <string name="status_unknown">Неизвестный статус!</string>
  <string name="become_driver">Стать водителем</string>
  <string name="enter">Войти</string>
  <string name="code">Введите код</string>
  <string name="sms_code_message">Мы отправили СМС с кодом на</string>
  <string name="repeat_code_from_sms_delayed">Отправить повтороно %1$d сек</string>
  <string name="repeat_code_from_sms">Отправить повтороно</string>
  <string name="geo_permissions_required">Нам нужно определять ваше местоположение с максимальной точностью, чтобы наилучшим образом подбирать вам заказы.</string>
  <string name="geolocation_required">Пожалуйста, включите геолокацию с обнаружением по GPS, Wi-Fi и мобильным сетям в настройках мобильного телефона.</string>
  <string name="gps_detection_required">Пожалуйста, включите обнаружение по GPS в настройках мобильного телефона.</string>
  <string name="network_detection_required">Пожалуйста, включите обнаружение по Wi-Fi и мобильным сетям в настройках мобильного телефона.</string>
  <string name="go_on_shift">Выйти на линию</string>
  <string name="error">Ошибка</string>
  <string name="free">Свободна</string>
  <string name="busy">Занята</string>
  <string name="no_vehicles_message">У вас отсутствуют транспортные средства.\nОбратитесь в офис обслуживания.</string>
  <string name="choose_vehicle">Гараж</string>
  <string name="orders_filter">Фильтр заказов</string>
  <string name="change">Сменить</string>
  <string name="working">В работе</string>
  <string name="online">На линии</string>
  <string name="resume_work">Возобновить работу</string>
  <string name="client_confirm">Ожидание подтверждения клиентом</string>
  <string name="moving_to_client">На встречу с клиентом!</string>
  <string name="order_fulfillment">Выполнение заказа</string>
  <string name="wait_for_orders">Ожидание заказа</string>
  <string name="navigator">Навигатор</string>
  <string name="turn_on_geolocation">Для раздачи заказов нам необходимо точно знать где вы находитесь.</string>
  <string name="turn_on_geo_detection">Для раздачи заказов нам необходимо точно знать где вы находитесь.</string>
  <string name="grant_access_to_geolocation">Разрешите определение местоположения</string>
  <string name="good">Хорошо</string>
  <string name="settings">Настройка</string>
  <string name="menu">Меню</string>
  <string name="balance">Баланс</string>
  <string name="balance_summary">Общий баланс</string>
  <string name="exit_app">Выйти из приложения</string>
  <string name="km">%1$.2f км</string>
  <string name="cargo_description">Описание груза</string>
  <string name="comment">Коментарий</string>
  <string name="accept_timed">Принять (%1$d сек)</string>
  <string name="set_out_timed">Выехать (%1$d сек)</string>
  <string name="timeout">Время вышло</string>
  <string name="offer">Предложение</string>
  <string name="new_order">Новый заказ доступен для принятия!</string>
  <string name="done">Готово</string>
  <string name="client_confirmation">Идет подтверждение у клиента.\nБудьте готовы начать движение</string>
  <string name="client_confirmation_problem">Не удается дозвониться клиенту.\nОператор занимается вашим заказом.</string>
  <string name="options">Опции</string>
  <string name="cost">Стоимость</string>
  <string name="arrived">Сообщить о прибытии</string>
  <string name="before_meet_client">До встречи с клиентом</string>
  <string name="call_client">Позвонить клиенту</string>
  <string name="calling_client">Идет вызов клиенту.\nБудьте готовы взять трубку!</string>
  <string name="client_location">geo:%1$f,%2$f?q=%1$f,%2$f(Клиент)</string>
  <string name="destination_location">geo:%1$f,%2$f?q=%1$f,%2$f(Пункт назначения)</string>
  <string name="install_geo_app">Сначала установите приложение для навигации.</string>
  <string name="information">Информация</string>
  <string name="start_order">Начать выполнение</string>
  <string name="wait_for_client">Клиент оповещен о вашем прибытии. Ожидайте.</string>
  <string name="get_directions">Построить маршрут</string>
  <string name="elapsed_time">Общее время</string>
  <string name="total_cost">Сумма</string>
  <string name="actions">Действия</string>
  <string name="complete_the_order">Завершить услугу</string>
  <string name="free_ride">По городу</string>
  <string name="select">Выбрать</string>
  <string name="in_progress">В работе</string>
  <string name="route">Маршрут</string>
  <string name="route_distance">Маршрут %1$.2f км</string>
  <string name="order_details">Информация о заказе</string>
  <string name="report_a_problem">Сообщить о проблеме</string>
  <string name="cancel_reason">Причина отмены</string>
  <string name="do_not_cancel">Не отменять</string>
  <string name="calling_operator">Дистпечер скоро свяжется.\nБудьте готовы взять трубку!</string>
  <string name="currency_format">##,###,### ₽</string>
  <string name="currency_per_min_format">##,###,###.00 ₽/мин</string>
  <string name="bonus_comment">Бонусные рубли не подлежат обмену на наличные денежные средства.</string>
  <string name="bonus_amount">Бонусный счёт</string>
  <string name="missed_order">Упущен заказ</string>
  <string name="server_connection">Связь с сервером</string>
  <string name="important_info">Важная информация</string>
  <string name="service">Услуга</string>
  <string name="order_duration_and_distance">Длительность и пробег</string>
  <string name="h_m_km">%1$d ч. %2$d мин., %3$.2f км</string>
  <string name="price">≈ %1$s</string>
  <string name="h_m">%1$d ч. %2$d мин.</string>
  <string name="address">Адрес</string>
  <string name="exit_confirmation">Вы уверены, что хотите выйти?\n</string>
  <string name="order_complete_question">Вы завершили работу не на всех точках. Вы уверены, что хотите завершить заказ?</string>
  <string name="next_address">Следующий адрес (%1$d из %2$d)</string>
  <string name="driver_blocked_message">Вы заблокированы.\nОбратитесь в офис обслуживания.</string>
  <string name="no_free_vehicle_message">Все транспортные средства заняты.\nОбратитесь к вашему руководителю.</string>
  <string name="total_payment">Итого к оплате</string>
  <string name="estimated_package">Предрасчёт</string>
  <string name="pay_by_cash">Наличными</string>
  <string name="estimated_package_time">Время пакета</string>
  <string name="estimated_package_distance">Расстояние</string>
  <string name="estimated_transport_cost">Перевозка</string>
  <string name="over_package">Сверх пакета</string>
  <string name="over_package_time">Время</string>
  <string name="over_package_transport_cost">Перевозка</string>
  <string name="over_package_tariff">Тариф сверх пакета</string>
  <string name="option_name">%1$s (опция)</string>
  <string name="paid">Оплачено</string>
  <string name="update">Обновить</string>
  <string name="not_now">Не сейчас</string>
  <string name="version_deprecated">Текущая версия устарела. Обновите приложение.</string>
  <string name="stop_work">Закончить работу</string>
  <string name="book">Бронировать</string>
  <string name="reject">Отказаться</string>
  <string name="arrival_date">Быть у клиента</string>
  <string name="new_pre_order">Новый предзаказ!</string>
  <string name="new_pre_order_message">Для рассмотрения доступен новый предварительный заказ.</string>
  <string name="today">Сегодня</string>
  <string name="tomorrow">Завтра</string>
  <string name="no_pre_orders_available">У вас нет заказов на время</string>
  <string name="upcoming_pre_orders">Заказы к исполнению</string>
  <string name="set_out">Выехать</string>
  <string name="new_order_available">Доступен новый заказ</string>
  <string name="upcoming_pre_order">Предстоящий заказ</string>
  <string name="distance_to_order">Расстояние до заказа</string>
  <string name="preliminary_order">Предварительный заказ</string>
  <string name="time_to_set_out">Пора! Выезжайте к клиенту или откажитесь.</string>
  <string name="exit">Выйти</string>
  <string name="version">Версия %1$s</string>
  <string name="app_version">Версия приложения %1$s</string>
  <string name="about">О приложении</string>
  <string name="order_cancelled">Заказ был отменен</string>
  <string name="break_description">Вы не принимаете срочные заказы, но вам по-прежнему будут предлагаться предварительные заказы.</string>
  <string name="rest">Отдых</string>
  <string name="block">Блокировка</string>
  <string name="night_mode">Ночной режим</string>
  <string name="night_mode_on">Включен</string>
  <string name="night_mode_off">Выключен</string>
  <string name="night_mode_auto">Авто</string>
  <string name="work_time">Время работы</string>
  <string name="_1">1</string>
  <string name="server_connection_desc">Необходимые для нормальной работы оповещения</string>
  <string name="important_info_desc">Важные информационные оповещения общего характера</string>
  <string name="default_notification_channel_id" templateMergeStrategy="preserve" translatable="false">state_channel</string>
  <string name="total">Итого</string>
  <string name="slash">/</string>
  <string name="orders_count">%1$d/</string>
  <string name="orders_earned">Заработано</string>
  <string name="orders_rejected">Отказался сам</string>
  <string name="orders_missed">Пропустил</string>
  <string name="retry">Повторить</string>
  <string name="orders_history">История заказов</string>
  <string name="server_settings">Настройки сервера</string>
  <string name="cashless">Безнал</string>
  <string name="cashless_amount">Безналичный счёт</string>
  <string name="purse">Кошелёк</string>
  <string name="purse_comment">Можно пополнить через Сбербанк Онлайн и терминалы Элекснет</string>
  <string name="cashless_comment">Получить безналичные средства можно в офисе компании</string>
  <string name="city">Город</string>
  <string name="country">За город</string>
  <string name="intercity">Межгород</string>
  <string-array name="month_names">
    <item>Январь</item>
    <item>Февраль</item>
    <item>Март</item>
    <item>Апрель</item>
    <item>Май</item>
    <item>Июнь</item>
    <item>Июль</item>
    <item>Август</item>
    <item>Сетнябрь</item>
    <item>Октябрь</item>
    <item>Ноябрь</item>
    <item>Декабрь</item>
  </string-array>
</resources>
