<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  >
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:orientation="vertical">
    <TextView
      android:id="@+id/balanceSummaryTitle"
      style="@style/TextAppearance.AppTheme.Title.Secondary"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/balance_summary"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
    <TextView
      android:id="@+id/balanceSummary"
      style="@style/TextAppearance.AppTheme.Balance"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/balanceSummaryTitle"
      tools:text="@string/currency_format"/>
    <View
      android:id="@+id/divider"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_marginTop="24dp"
      android:background="@color/colorDivider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/balanceSummary"/>
    <TextView
      android:id="@+id/balanceAmountTitle"
      style="@style/TextAppearance.AppTheme.Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/purse"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/divider"/>
    <TextView
      android:id="@+id/balanceAmount"
      style="@style/TextAppearance.AppTheme.Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/divider"
      tools:text="@string/currency_format"/>
    <TextView
      android:id="@+id/balanceAmountComment"
      style="@style/TextAppearance.AppTheme.Subhead"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/purse_comment"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/balanceAmountTitle"/>
    <TextView
      android:id="@+id/cashlessAmountTitle"
      style="@style/TextAppearance.AppTheme.Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/cashless_amount"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/balanceAmountComment"/>
    <TextView
      android:id="@+id/cashlessAmount"
      style="@style/TextAppearance.AppTheme.Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/balanceAmountComment"
      tools:text="@string/currency_format"/>
    <TextView
      android:id="@+id/cashlessAmountComment"
      style="@style/TextAppearance.AppTheme.Subhead"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/cashless_comment"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cashlessAmountTitle"/>
    <TextView
      android:id="@+id/bonusAmountTitle"
      style="@style/TextAppearance.AppTheme.Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/bonus_amount"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cashlessAmountComment"/>
    <TextView
      android:id="@+id/bonusAmount"
      style="@style/TextAppearance.AppTheme.Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cashlessAmountComment"
      tools:text="@string/currency_format"/>
    <TextView
      style="@style/TextAppearance.AppTheme.Subhead"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/bonus_comment"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/bonusAmountTitle"/>
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
