<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  >
  <android.support.v7.widget.Toolbar
    android:id="@+id/appBar"
    style="@style/AppTheme.AppBar"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    app:navigationIcon="@drawable/ic_back_24dp"
    app:title="@string/actions"/>
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <TextView
        android:id="@+id/orderRoute"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:text="@string/route"/>
      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"/>
      <TextView
        android:id="@+id/orderDetails"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:text="@string/order_details"/>
      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"/>
      <TextView
        android:id="@+id/reportAProblem"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:text="@string/report_a_problem"/>
      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"/>
    </LinearLayout>
  </ScrollView>
</LinearLayout>
