<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:paddingBottom="12dp">
  <ScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@id/openNavigator"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_weight="1">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/elapsed_time"
        android:textColor="@color/colorAccentSecond"/>
      <TextView
        android:id="@+id/timeText"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="40sp"
        tools:text="00:32:43"/>
      <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/total_cost"
        android:textColor="@color/colorAccentSecond"/>
      <TextView
        android:id="@+id/costText"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="40sp"
        tools:text="10 028 ₽"/>
      <TextView
        android:id="@+id/freeRideText"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/free_ride"
        android:visibility="gone"/>
      <TextView
        android:id="@+id/addressText"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:text="Москва, ул. Академика Пилюгина, 14 корпус 4, кв. 1122, П2, Э8"/>
      <TextView
        android:id="@+id/commentTitleText"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/comment"
        android:textColor="@color/colorAccentSecond"/>
      <TextView
        android:id="@+id/commentText"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:text="Заезд со стороны двора"/>
    </LinearLayout>
  </ScrollView>
  <Button
    android:id="@+id/openNavigator"
    style="@style/AppTheme.Button.Colored.Compact"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="12dp"
    android:layout_marginLeft="12dp"
    app:layout_constraintBottom_toTopOf="@id/completeTheOrder"
    app:layout_constraintEnd_toStartOf="@id/closeRoutePoint"
    app:layout_constraintStart_toStartOf="parent"
    android:text="@string/get_directions"/>
  <Button
    android:id="@+id/closeRoutePoint"
    style="@style/AppTheme.Button.Colored.Compact"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="12dp"
    android:layout_marginRight="12dp"
    android:text="@string/arrived"
    app:layout_constraintBottom_toTopOf="@id/completeTheOrder"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/openNavigator"/>
  <Button
    android:id="@+id/completeTheOrder"
    style="@style/AppTheme.Button.Colored.Compact"
    android:layout_width="0dp"
    android:layout_height="56dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:text="@string/complete_the_order"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>