<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:scrollbarStyle="outsideOverlay"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp">
    <ImageView
      android:id="@+id/routePointMark1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:contentDescription="@null"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/routeTitleText"
      app:srcCompat="@drawable/ic_route_point"/>
    <ImageView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="13dp"
      android:alpha="0.6"
      android:contentDescription="@null"
      app:layout_constraintBottom_toBottomOf="@id/routePointMark2"
      app:layout_constraintEnd_toEndOf="@id/routePointMark1"
      app:layout_constraintStart_toStartOf="@id/routePointMark1"
      app:layout_constraintTop_toTopOf="@id/routePointMark1"
      app:srcCompat="@drawable/ic_gradient_accent" />
    <ImageView
      android:id="@+id/routePointMark2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:contentDescription="@null"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/nextAddressText"
      app:srcCompat="@drawable/ic_route_point" />
    <TextView
      android:id="@+id/estimatedPriceTitleText"
      style="@style/TextAppearance.AppTheme.Subhead"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/cost"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
    <TextView
      android:id="@+id/estimatedPriceText"
      style="@style/TextAppearance.AppTheme.Balance"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/estimatedPriceTitleText"
      tools:text="@string/price" />
    <TextView
      android:id="@+id/paymentTypeSign"
      style="@style/TextAppearance.AppTheme.Title"
      android:layout_width="wrap_content"
      android:layout_height="32dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:paddingStart="16dp"
      android:paddingEnd="16dp"
      android:background="@drawable/ic_purple_chip"
      android:gravity="center"
      android:text="@string/cashless"
      android:textColor="@color/light0"
      app:layout_constraintBottom_toBottomOf="@id/estimatedPriceText"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/estimatedPriceText" />
    <TextView
      android:id="@+id/estimationTitleText"
      style="@style/TextAppearance.AppTheme.Subhead"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/order_duration_and_distance"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/estimatedPriceText" />
    <TextView
      android:id="@+id/estimationText"
      style="@style/TextAppearance.AppTheme.Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/estimationTitleText"
      tools:text="@string/h_m_km" />
    <TextView
      android:id="@+id/routeType"
      style="@style/TextAppearance.AppTheme.Title"
      android:layout_width="wrap_content"
      android:layout_height="32dp"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:paddingStart="16dp"
      android:paddingEnd="16dp"
      android:background="@drawable/ic_purple_chip"
      android:gravity="center"
      android:text="@string/city"
      android:textColor="@color/light0"
      app:layout_constraintBaseline_toBaselineOf="@id/estimationText"
      app:layout_constraintEnd_toEndOf="parent" />
    <TextView
      android:id="@+id/distanceTitleText"
      style="@style/TextAppearance.AppTheme.Subhead"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/distance_to_order"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/estimationText" />
    <TextView
      android:id="@+id/cargoDescText"
      style="@style/TextAppearance.AppTheme.Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cargoDescTitleText"
      tools:text="Заехать купить 10 коробок. Чистая машина. Не курить!"/>
    <TextView
      android:id="@+id/optionsTitleText"
      style="@style/TextAppearance.AppTheme.Subhead"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/options"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cargoDescText"/>
    <TextView
      android:id="@+id/optionsText"
      style="@style/TextAppearance.AppTheme.Title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:lineSpacingExtra="6dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/optionsTitleText"
      tools:text="Пропуск в центр Москвы\nОткрытый кузов\nРемни-крепления\nМобильный банк\nГрузчики: 2\nПассажиры: 3"/>
    <TextView
      android:id="@+id/distanceText"
      style="@style/TextAppearance.AppTheme.Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/distanceTitleText"
      tools:text="@string/km" />
    <TextView
      android:id="@+id/cargoDescTitleText"
      style="@style/TextAppearance.AppTheme.Subhead"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/cargo_description"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/distanceText" />
    <TextView
      android:id="@+id/routeTitleText"
      style="@style/TextAppearance.AppTheme.Subhead"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:paddingBottom="8dp"
      android:text="@string/route"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/optionsText" />
    <TextView
      style="@style/TextAppearance.AppTheme.SubTitle"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="2dp"
      android:gravity="center"
      android:text="@string/_1"
      app:layout_constraintEnd_toEndOf="@id/routePointMark1"
      app:layout_constraintStart_toStartOf="@id/routePointMark1"
      app:layout_constraintTop_toTopOf="@id/routePointMark1" />
    <TextView
      android:id="@+id/nextAddressText"
      style="@style/TextAppearance.AppTheme.SubTitle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/routePointMark1"
      app:layout_constraintTop_toBottomOf="@id/routeTitleText"
      tools:text="Москва, ул. Академика Пилюгина, 14 корпус 4, кв. 1122, П2, Э8" />
    <TextView
      android:id="@+id/routePointsCount"
      style="@style/TextAppearance.AppTheme.SubTitle"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="2dp"
      android:gravity="center"
      app:layout_constraintEnd_toEndOf="@id/routePointMark2"
      app:layout_constraintStart_toStartOf="@id/routePointMark2"
      app:layout_constraintTop_toTopOf="@id/routePointMark2"
      tools:text="2" />
    <TextView
      android:id="@+id/lastAddressText"
      style="@style/TextAppearance.AppTheme.SubTitle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/routePointMark1"
      app:layout_constraintTop_toBottomOf="@id/nextAddressText"
      tools:text="Москва, ул. Академика Пилюгина, 14 корпус 4, кв. 1122, П2, Э8" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>